--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -106,6 +106,11 @@ jobs:
         sudo ./build_firmware_modify $TNAME 0
         sudo mv -f images/*.trx /opt/images/
 
+    - name: Check Files
+      run: |
+        cd /opt/images
+        ls
+
     - name: Create release
       id: release
       uses: ncipollo/release-action@v1
