--- a/.github/workflows/RM2100.yml
+++ b/.github/workflows/RM2100.yml
@@ -17,6 +17,7 @@ on:
 env:
   TZ: Asia/Shanghai
   FILE_NAME: Padavan
+  FILE_NAME1: RM2100
 
 jobs:
   build:
@@ -136,7 +137,7 @@ jobs:
 
     - name: Telegram notification
       if: steps.ls.outputs.status == 'success' && !cancelled()
-      run: curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME }}编译完成" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
+      run: curl -k --data chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" --data "text=${{ env.FILE_NAME1 }}编译完成" "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"
 
 #    - name: WeChat notification
 #      if: steps.ls.outputs.status == 'success' && !cancelled()
