--- a/.github/workflows/RM2100.yml
+++ b/.github/workflows/RM2100.yml
@@ -44,11 +44,15 @@ jobs:
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
+    - name: cat Golang version
+      run: |
+        cd /opt/hostedtoolcache/go
+        ls
     - name: Set Golang
       run: |
         cd /opt/hostedtoolcache/go
-        rm -rf /opt/hostedtoolcache/go/1.14.12
-        mv 1.15.5 1.14.12
+        rm -rf /opt/hostedtoolcache/go/1.14.13
+        mv 1.15.6 1.14.13
     - name: Build Firmware
       env:
         TNAME: RM2100
