--- a/.github/workflows/HC5761A.yml
+++ b/.github/workflows/HC5761A.yml
@@ -44,6 +44,10 @@ jobs:
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
+    - name: cat Golang version
+      run: |
+        cd /opt/hostedtoolcache/go
+        ls
     - name: Set Golang
       run: |
         cd /opt/hostedtoolcache/go
