--- a/.github/workflows/RM2100.yml
+++ b/.github/workflows/RM2100.yml
@@ -137,13 +137,13 @@ jobs:
       id: release
       uses: ncipollo/release-action@v1
       with:
-        name: ${{ env.DATE }} Padavan for RM2100 HC5761A
+        name: ${{ env.DATE }} Padavan for RM2100
         allowUpdates: true
         tag: ${{ env.FILE_NAME }}
         commit: master
         token: ${{ secrets.RELEASES_TOKEN }}
         body: |
-          红米ac2100，极路由2老毛子固件，每周五更新，感谢c大！
+          红米ac2100老毛子固件，每周五更新，感谢c大！
         artifacts: /opt/images/*
 
     - name: Telegram notification
